Override GtkTextView's create_buffer() virtual function

When gtk_text_view_get_buffer() is called the first time, the buffer is
created lazily if it was not already set. By overridding
create_buffer(), a GtkSourceBuffer is created instead of a
GtkTextBuffer.

https://bugzilla.gnome.org/show_bug.cgi?id=643732